; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_ScriptRunner_b.c_Script_SoundPlayBeep_b.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_ScriptRunner_b.c_Script_SoundPlayBeep_b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@script_cmd_args = common dso_local global i32* null, align 8
@NR52_REG = common dso_local global i32 0, align 4
@NR41_REG = common dso_local global i32 0, align 4
@NR42_REG = common dso_local global i32 0, align 4
@NR43_REG = common dso_local global i32 0, align 4
@NR44_REG = common dso_local global i32 0, align 4
@NR50_REG = common dso_local global i32 0, align 4
@NR51_REG = common dso_local global i32 0, align 4
@script_cmd_args_len = common dso_local global i64 0, align 8
@script_ptr = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@script_continue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Script_SoundPlayBeep_b() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @script_cmd_args, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 0
  %4 = load i32, i32* %3, align 4
  store i32 %4, i32* %1, align 4
  store i32 128, i32* @NR52_REG, align 4
  store i32 1, i32* @NR41_REG, align 4
  store i32 240, i32* @NR42_REG, align 4
  %5 = load i32, i32* %1, align 4
  %6 = or i32 40, %5
  store i32 %6, i32* @NR43_REG, align 4
  store i32 192, i32* @NR44_REG, align 4
  store i32 119, i32* @NR50_REG, align 4
  %7 = load i32, i32* @NR51_REG, align 4
  %8 = or i32 %7, 136
  store i32 %8, i32* @NR51_REG, align 4
  %9 = load i64, i64* @script_cmd_args_len, align 8
  %10 = add nsw i64 1, %9
  %11 = load i32, i32* @script_ptr, align 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %12, %10
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* @script_ptr, align 4
  %15 = load i32, i32* @TRUE, align 4
  store i32 %15, i32* @script_continue, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
